--- a/styles.css
+++ b/styles.css
@@ -23,13 +23,9 @@ Reset Rule
 
 /*===========================
 
-Body and Header CSS
+Header
 
 ===========================*/
-
-body {
-  font-family: 'Bebas Neue', Impact, sans-serif;
-}
 
 header {
   background-color: #6003C3;
@@ -45,6 +41,48 @@ h1 {
 }
 
 
+/*===========================
+
+Body
+
+===========================*/
+
+body {
+  font-family: 'Bebas Neue', Impact, sans-serif;
+}
+
+p {
+  color: #6003C3;
+  font-size: 2rem;
+  padding: 2rem;
+  text-align: center;
+}
+
+.boxes {
+  text-align: center;
+  font-size: 5rem;
+  color: #6003C3;
+}
+
+.box {
+  padding: 1rem;
+  margin: 0 8rem 2rem 8rem;
+  border: 1.25rem solid #6003C3;
+  border-radius: 1rem;
+  box-shadow: .5rem .5rem 1rem gray;
+}
+
+#box-1 {
+  background-color: #FCFF00;
+}
+
+#box-2 {
+  background-color: #57FFC9;
+}
+
+#box-3 {
+  background-color: #A5FF01;
+}
 /*===========================
 
 Responsive Web Coding - 768px by 1024px (Tablet)
