Display losses at the bottom of the boxes

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,13 @@ p {
 #box-3 {
   background-color: #A5FF01;
 }
+
+.score {
+  color: #6003C3;
+  font-size: 2rem;
+  padding: 2rem;
+  text-align: center;
+}
 /*===========================
 
 Responsive Web Coding - 768px by 1024px (Tablet)
